LinKreta_POC_Repository/force-app/main/default/objects/Account_Growth_Strategy__c/Account_Growth_Strategy__c.object-meta.xml
<CustomObject>
    <label>Account Growth Strategy</label>
    <nameField>
        <label>Account Growth Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Growth Strategy</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>