LinKreta_POC_Repository/force-app/main/default/objects/Account_Growth_Strategy__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Growth Strategy</relationshipLabel>
    <relationshipName>Account_Growth_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>