LinKreta_POC_Repository/force-app/main/default/objects/Account_Growth_Strategy__c/fields/Client_Entity__c.field-meta.xml
<CustomField>
    <fullName>Client_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Growth Strategy</relationshipLabel>
    <relationshipName>Account_Growth_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>