LinKreta_POC_Repository/force-app/main/default/objects/Account_Growth_Strategy__c/fields/GT_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>GT_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsibility Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Growth_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>