LinKreta_POC_Repository/force-app/main/default/objects/Account_Growth_Strategy__c/fields/Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Status_Update__c</fullName>
    <label>Status/Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>